# CML_AMP_RAG_Monitoring

./: .gitignore  .project-metadata.yaml  Dockerfile  NOTICE.txt  README.md  catalog-entry.yaml  export_requirements.sh  local.sh  pyproject.toml  rag_metrics  test_llm_eval.py
api/: generate.sh  go.mod  go.sum
api/client/: metrics_client.go
api/client/experiments/: experiments_client.go  get_experiments_parameters.go  get_experiments_responses.go
api/cmd/: api.go  wire.go  wire_gen.go
api/models/: experiment.go  experiment_run.go  experiment_run_list_filter.go  experiment_run_parameter.go  metric.go  metric_list_filter.go  metric_tag.go  metric_value.go  metrics.go
api/pkg/sql/: db.go  (+11 more)
api/restapi/: configure_metrics.go  doc.go  embedded_spec.go
api/schema/: base.yaml
ragmon/: app.py  config.py  data_types.py  exceptions.py  main.py  populate_and_simulate_qa.py  pyproject.toml
ragmon/pages/: 1_Home.py  2_Data_Source.py  2_Monitoring_Dashboard.py  3_Custom_Evaluators.py  3_RAG_Chat.py  4_Monitoring_Dashboard.py  5_Add_Custom_Evaluator.py
ragmon/routers/index/: __init__.py  judge.py  qdrant.py
ragmon/services/: CaiiEmbeddingModel.py  ragllm.py
ragmon/utils/: __init__.py  custom_evals.py  dashboard.py  evaluate.py  judge.py  keyword.py  keyword_detection.py  metric_store.py  mlflowstore.py  reconciler.py
scripts/: build_api.sh  check_updates.sh  install_base.py  install_base.sh  install_golang.sh  install_py_deps.sh  install_qdrant.sh  install_sqlite.sh  populate_and_simulate_qa.py  refresh_project.py  refresh_project.sh  start_app.py  start_app.sh
service/: Dockerfile  main.py  requirements.txt
st_app/: app.py  data_types.py  requirements.txt
st_app/pages/: 1_Home.py  2_Data_Source.py  3_RAG_Chat.py  4_Monitoring_Dashboard.py  5_Custom_Evaluators.py  5_Leave_Feedback.py
(+246 files in other folders)
