[tool.poetry]
name = "ampragmonitoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "!=3.9.7,>=3.9,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.3"}
mlflow = "2.19.0"
opentelemetry-exporter-otlp-proto-http = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-instrumentation-logging = "0.48b0"
llama-index = "0.11.19"
llama-index-embeddings-bedrock = "0.3.1"
llama-index-llms-bedrock-converse = "0.3.2"
llama-index-vector-stores-qdrant = "0.3.2"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
typing-extensions = "4.12.2"
streamlit = "^1.39.0"
numpy = "1.26.4"
pandas = "^2.2.3"
plotly-express = "^0.4.1"
fastapi-cli = "^0.0.5"
urllib3 = "<2"
streamlit-autorefresh = "^1.0.1"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
