[project]
name = "ragmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi-cli==0.0.5",
    "fastapi==0.115.3",
    "llama-index-embeddings-bedrock==0.3.1",
    "llama-index-embeddings-openai==0.2.5",
    "llama-index-llms-bedrock-converse==0.3.2",
    "llama-index-llms-mistralai==0.2.6",
    "llama-index-llms-openai==0.2.10",
    "llama-index-vector-stores-qdrant==0.3.2",
    "llama-index==0.11.19",
    "mlflow==2.16.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "plotly-express==0.4.1",
    "pydantic-settings==2.3.4",
    "pydantic==2.8.2",
    "ruff>=0.8.2",
    "streamlit-autorefresh==1.0.1",
    "streamlit==1.39.0",
    "typing-extensions==4.12.2",
    "urllib3<2",
]
